hackgsu fix and far fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<title>hackGSU Home</title>
+	<title>hackGSU</title>
 </head>
 <body class="overflow-auto">
 
@@ -234,8 +234,8 @@
 			        	You will definitely need your laptop, phone, their chargers, as well as a valid student or government ID. Feel free to also bring along a sleeping bag, and we recommend some comfortable clothes (and a hoodie!).
 			    	</div>
 			    	<div class="faq-item float-left">
-			        	<h4>How can I confirm that my registration was received for HackGSU?</h4>
-			        	Login to your my.mlh.io account, and choose My Profile > Authorized Apps. Your HackGSU registration will display, including the date that you registered.
+			        	<h4>How can I confirm that my registration was received for hackGSU?</h4>
+			        	Login to your my.mlh.io account, and choose My Profile > Authorized Apps. Your hackGSU registration will display, including the date that you registered.
 			    	</div>
 				</div>
 				
@@ -254,11 +254,11 @@
 			    	</div>
 			    	<div class="faq-item float-left">
 			        	<h4>I am not near to Atlanta, is there travel reimbursement?</h4>
-			        	We will provide up to $200 in individual travel reimbursement this year, while funds are available. Please let us know in advance if you live out of state so that we can coordinate with you! (If we are not notified in advance of your travel reimbursement request, unfortunately we cannot guarantee that we will be able to reimburse you).
+			        	Travel reimbursement requests are closed. We will be providing up to $200 in individual travel reimbursement this year, while funds are available, for requests received before the cutoff. (If we were not notified in advance of your travel reimbursement request, unfortunately we cannot guarantee that we will be able to reimburse you).
 			    	</div>			        	
 			    	<div class="faq-item float-left">
 			        	<h4>How do I obtain travel reimbursement?</h4>
-			        	We will provide up to $200 in individual travel reimbursement this year, while funds are available (see above). To obtain the travel reimbursement, you must have receipts. You must not live or go to school in Georgia to be eligible for travel reimbursement. Funds are dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the HackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).
+			        	Travel reimbursement requests are closed. We will be providing up to $200 in individual travel reimbursement this year, while funds are available (see above), for requests received before the cutoff. To obtain the travel reimbursement, you must have receipts. <strong>You must not live or go to school in Georgia to be eligible for travel reimbursement.</strong> Funds will be dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the HackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).
 			    	</div>
 			    	<div class="faq-item float-left">
 			        	<h4>Is there a Code of Conduct?</h4>
