added some links boi

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 						<div class="position-relative float-left unselectable link nav-link width-third" id="register-link">
 							<span class="nav-link-text">Register</span>
 						</div>
+						<div class="position-relative float-left unselectable link nav-link width-third" id="schedule-link">
+							<span class="nav-link-text">Schedule</span>
+						</div>
 						<div class="position-relative float-left unselectable link nav-link  width-third" id="faq-link">
 							<span class="nav-link-text">FAQ</span>
 						</div>
@@ -33,6 +36,9 @@
 						</div>
 						<div class="position-relative float-left unselectable link nav-link width-third" id="slack-link">
 							<span class="nav-link-text">Slack</span>
+						</div>
+						<div class="position-relative float-left unselectable link nav-link width-third" id="explore-link">
+							<span class="nav-link-text">About</span>
 						</div>
 					</div>
 				</div>
