another big one... this one has surprises

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 							<span class="nav-link-text">Sponsors</span>
 						</div>
 						<div class="position-relative float-left unselectable link nav-link width-third" id="slack-link">
-							<span class="nav-link-text">Slack</span>
+							<span class="nav-link-text">Devpost</span>
+						</div>
+						<div class="position-relative float-left unselectable link nav-link width-third" id="gallery-link">
+							<span class="nav-link-text">Gallery</span>
 						</div>
 						<div class="position-relative float-left unselectable link nav-link width-third" id="explore-link">
 							<span class="nav-link-text">About</span>
@@ -286,6 +289,7 @@
 
 		<!-- slideshow image -->
 		<div class="height-full-screen width-full-screen mobile-cover-full-image position-relative float-left overflow-auto" id="slideshow-container">
+			<div class="desktop-slideshow-image" id="desktop-slideshow-image"></div>
 			<div class="height-full-screen position-relative float-left" id="slideshow">
 				<div class="arrow-image" id="arrow-image-left">
 					<img class="slideshow-image-placement" id="slideshow-right" src="images/slideshow/arrows/right.png">
@@ -340,9 +344,9 @@
 		</div>
 		<div class="zindex-top" id="info-block">
 			<!-- <div class="width-full height-full blur-50 position-absolute position-absolute-top"></div> -->
-			<h3 class="link ">Georgia State University</h3>
+			<h3 class="link">Georgia State University</h3>
 			<h1 class="no-cursor ">10 . 21 . 16</h1>
-			<div class="open-sans position-inline-inner-middle " id="rsvp-button">REGISTER</div>
+			<div class="open-sans position-inline-inner-middle rsvp-button" id="rsvp-button">REGISTER</div>
 			
 		</div>
 	</div>
