finalized hackbot drawer animation

--- a/index_new.html
+++ b/index_new.html
@@ -32,12 +32,13 @@
 					<span class="title">
 						H&nbsp;&nbsp;A&nbsp;&nbsp;C&nbsp;&nbsp;K&nbsp;&nbsp;<font style="font-weight: 400">G&nbsp;&nbsp;S&nbsp;U</font>
 					</span>
+					<span class="date">0&nbsp;3&nbsp;.&nbsp;3&nbsp;1&nbsp;.&nbsp;1&nbsp;7</span>
 				</section>
 			</section>
 		</section>
 	</form>
 
 	
-	
+<script type="text/javascript" src="assets/js/spring2017/main.js"></script>
 </body>
 </html>
