nav links on desktop

--- a/index_new.html
+++ b/index_new.html
@@ -34,6 +34,11 @@
 					</span>
 					<span class="date">0&nbsp;3&nbsp;.&nbsp;3&nbsp;1&nbsp;.&nbsp;1&nbsp;7</span>
 				</section>
+				<section class="nav-links">
+					<a class="modified-link schedule" href="#schedule"><span class="link">Schedule</span></a>
+					<a class="modified-link faq" href="#faq"><span class="link">Frequent Questions</span></a>
+					<a class="modified-link sponsors" href="#sponsors"><span class="link">Sponsors</span></a>
+				</section>
 			</section>
 		</section>
 	</form>
