testing link interface

--- a/index_new.html
+++ b/index_new.html
@@ -4,7 +4,7 @@
 	<title>HackGSU / March 2017 / Georgia State University</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/spring2017/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
-	<link rel="icon" href="assets/img/fall2016/favicon.ico">
+	<link rel="icon" href="assets/img/spring2017/favicon.ico">
 	<link rel="manifest" href="manifest/manifest.json">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<meta name="description" content="">
@@ -13,7 +13,14 @@
 <body>
 	<!-- php include navigation here -->
 	
-	<section class="hackbot"></section>
+	<section class="hackbot">
+		<section class="nav-links">
+			<a class="modified-link schedule" href="#schedule"><span class="link">Schedule</span></a>
+			<a class="modified-link faq" href="#faq"><span class="link">FAQ</span></a>
+			<a class="modified-link sponsors" href="#sponsors"><span class="link">Sponsors</span></a>
+			<a class="modified-link devpost" href="#devpost"><span class="link">Devpost</span></a>
+		</section>
+	</section>
 	
 	<form action="">
 		<input type="checkbox" name="navigation" id="navigator">
