finalized nav drawer mobile. added overflow:hidden for desktop view on hackbot open

--- a/index_new.html
+++ b/index_new.html
@@ -31,7 +31,7 @@
 					<a class="modified-link schedule" href="#schedule"><span class="link">Schedule</span></a>
 					<a class="modified-link faq" href="#faq"><span class="link">FAQ</span></a>
 					<a class="modified-link sponsors" href="#sponsors"><span class="link">Sponsors</span></a>
-					<a class="modified-link devpost" href="#devpost"><span class="link">Devpost</span></a>
+					<!-- <a class="modified-link devpost" href="#devpost"><span class="link">Devpost</span></a> -->
 				</noscript>
 					<a class="modified-link schedule" href="#schedule">
 						<label for="navigator">
